--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,164 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
 *{
     margin:0;
     padding:0;
     box-sizing:border-box;
+    font-family: "Poppins", sans-serif;
 }
 body{
     background:#633654;
+    
 }
 canvas{
     display: block;
     /* make sure W&H is properly calc. (no scrll bars wil/fit screen) */
-    
     background:#633654;
     filter: blur(10px) contrast(20px);
     /* creates a liquid behavior for the metaballs */
     
+    z-index: -10;
 }
+
+
+
+.navbar {
+    position: fixed;
+    transition: 1s;
+}
+
+
+.icon-bar {
+    background-color: #000;
+
+}
+
+.nav {
+    font-family: "Poppins", sans-serif;
+    
+    padding: 10px 20px;
+    
+    
+}
+
+.nav li {
+    display: inline;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+
+    
+	transform: translate(-50%, -50%);
+    
+}
+
+.nav li:nth-child(1) {
+	color: transparent;
+	-webkit-text-stroke: 2px #03a9f4;
+	animation: animate 4s ease-in-out infinite;
+    
+}
+
+.nav li:nth-child(2) {
+	color: transparent;
+	-webkit-text-stroke: 2px #03a9f4;
+    color: #03a9f4;
+	animation: animate 4s ease-in-out infinite;
+}
+
+.nav li:nth-child(3) {
+color: transparent;
+	-webkit-text-stroke: 2px #03a9f4;
+    color: #03a9f4;
+	animation: animate 4s ease-in-out infinite;	
+}
+
+.nav li:nth-child(4) {
+	color: transparent;
+	-webkit-text-stroke: 2px #03a9f4;
+    color: #03a9f4;
+	animation: animate 4s ease-in-out infinite;
+}
+
+.nav li:nth-child(5) {
+	color: transparent;
+	-webkit-text-stroke: 2px #03a9f4;
+    color: #03a9f4;
+	animation: animate 4s ease-in-out infinite;
+}
+
+
+
+
+/* .nav li:after {
+    content: '';
+    display: block;
+    border-bottom: 2px solid #38fd07;
+    transform: scaleX(0);
+    transition: .2s ease-in-out;
+    
+}
+
+.nav li:hover:after {
+    transform: scaleX(1);
+} */
+
+.prof-border-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+    height:auto;
+    z-index: 20;
+    position:absolute;
+    top: 25%;
+    left:43%;
+    box-shadow: 5px 5px 5px #633654;
+  }
+
+  .prof-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+    height:auto;
+    z-index: 30;
+    position:absolute;
+    top: 29%;
+    left:45.5%;
+    box-shadow: 5px 5px 5px #633654;
+  }
+
+@keyframes animate {
+	0%,
+	100% {
+		clip-path: polygon(
+			0% 45%,
+			16% 44%,
+			33% 50%,
+			54% 60%,
+			70% 61%,
+			84% 59%,
+			100% 52%,
+			100% 100%,
+			0% 100%
+		);
+	}
+
+	50% {
+		clip-path: polygon(
+			0% 60%,
+			15% 65%,
+			34% 66%,
+			51% 62%,
+			67% 50%,
+			84% 45%,
+			100% 46%,
+			100% 100%,
+			0% 100%
+		);
+	}
+}
+
+
+
